{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 225,
  "lineage": "d070c8d7-6017-cbd8-d377-a8059775347b",
  "resources": [
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689069515280:route-table/rtb-010e73915de999130",
            "associations": [
              {
                "gateway_id": "",
                "main": true,
                "route_table_association_id": "rtbassoc-0130d533458fd135c",
                "route_table_id": "rtb-010e73915de999130",
                "subnet_id": ""
              }
            ],
            "filter": [
              {
                "name": "association.main",
                "values": [
                  "true"
                ]
              }
            ],
            "gateway_id": null,
            "id": "rtb-010e73915de999130",
            "owner_id": "689069515280",
            "region": "us-east-1",
            "route_table_id": "rtb-010e73915de999130",
            "routes": [],
            "subnet_id": null,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-09af3b8d20e312e6b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "explicit_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-02cbd0f750a899b2d",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689069515280:subnet/subnet-02cbd0f750a899b2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 8178,
            "cidr_block": "192.168.160.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02cbd0f750a899b2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "689069515280",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "eksctl-multitenant-chatapp-cluster/SubnetPrivateUSEAST1C",
              "alpha.eksctl.io/cluster-name": "multitenant-chatapp",
              "alpha.eksctl.io/cluster-oidc-enabled": "true",
              "alpha.eksctl.io/eksctl-version": "0.164.0",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "multitenant-chatapp",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09af3b8d20e312e6b"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-0db09e39c4b62f49c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689069515280:subnet/subnet-0db09e39c4b62f49c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 8179,
            "cidr_block": "192.168.128.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db09e39c4b62f49c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "689069515280",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "eksctl-multitenant-chatapp-cluster/SubnetPrivateUSEAST1B",
              "alpha.eksctl.io/cluster-name": "multitenant-chatapp",
              "alpha.eksctl.io/cluster-oidc-enabled": "true",
              "alpha.eksctl.io/eksctl-version": "0.164.0",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "multitenant-chatapp",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09af3b8d20e312e6b"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "runtime_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689069515280:vpc/vpc-09af3b8d20e312e6b",
            "cidr_block": "192.168.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-02a4998e939e7e3df",
                "cidr_block": "192.168.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-032ed332de9f6432a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09af3b8d20e312e6b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-010e73915de999130",
            "owner_id": "689069515280",
            "region": "us-east-1",
            "tags": {
              "Name": "eksctl-multitenant-chatapp-cluster/VPC",
              "alpha.eksctl.io/cluster-name": "multitenant-chatapp",
              "alpha.eksctl.io/cluster-oidc-enabled": "true",
              "alpha.eksctl.io/eksctl-version": "0.164.0",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "multitenant-chatapp"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "runtime",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689069515280:security-group/sg-0fac7937a3f25a585",
            "description": "AgentCore runtime egress to VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All egress (reaches VPC endpoints)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fac7937a3f25a585",
            "ingress": [],
            "name": "acvals-su-chain-demo-runtime",
            "name_prefix": "",
            "owner_id": "689069515280",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "acvals-su-chain-demo-runtime"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "acvals-su-chain-demo-runtime",
              "Project": "AgentCore-Supply-Chain",
              "Stack": "acvals-su-chain"
            },
            "timeouts": null,
            "vpc_id": "vpc-09af3b8d20e312e6b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "689069515280",
            "id": "sg-0fac7937a3f25a585",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689069515280:security-group/sg-073d2390cf11e8ab1",
            "description": "Allow HTTPS from VPC for AgentCore VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-073d2390cf11e8ab1",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "HTTPS from VPC CIDR",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "acvals-su-chain-demo-vpc-endpoints",
            "name_prefix": "",
            "owner_id": "689069515280",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "acvals-su-chain-demo-vpc-endpoints"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "acvals-su-chain-demo-vpc-endpoints",
              "Project": "AgentCore-Supply-Chain",
              "Stack": "acvals-su-chain"
            },
            "timeouts": null,
            "vpc_id": "vpc-09af3b8d20e312e6b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "689069515280",
            "id": "sg-073d2390cf11e8ab1",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "bedrock_agentcore",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689069515280:vpc-endpoint/vpce-0e22e686b096d00c8",
            "dns_entry": [
              {
                "dns_name": "vpce-0e22e686b096d00c8-k51mxjv2.bedrock-agentcore.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e22e686b096d00c8-k51mxjv2-us-east-1c.bedrock-agentcore.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e22e686b096d00c8-k51mxjv2-us-east-1b.bedrock-agentcore.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "bedrock-agentcore.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06252772G4IQN5NTDY44"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e22e686b096d00c8",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-07f967638d7a771f1",
              "eni-0fee0953c2187743a"
            ],
            "owner_id": "689069515280",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-073d2390cf11e8ab1"
            ],
            "service_name": "com.amazonaws.us-east-1.bedrock-agentcore",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "192.168.142.168",
                "subnet_id": "subnet-0db09e39c4b62f49c"
              },
              {
                "ipv4": "192.168.178.140",
                "subnet_id": "subnet-02cbd0f750a899b2d"
              }
            ],
            "subnet_ids": [
              "subnet-02cbd0f750a899b2d",
              "subnet-0db09e39c4b62f49c"
            ],
            "tags": {
              "Name": "acvals-su-chain-demo-bedrock_agentcore"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "acvals-su-chain-demo-bedrock_agentcore",
              "Project": "AgentCore-Supply-Chain",
              "Stack": "acvals-su-chain"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09af3b8d20e312e6b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "689069515280",
            "id": "vpce-0e22e686b096d00c8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "data.aws_region.current",
            "data.aws_subnet.runtime_subnets",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": "bedrock_runtime",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689069515280:vpc-endpoint/vpce-01c72056a0150e8a1",
            "dns_entry": [
              {
                "dns_name": "vpce-01c72056a0150e8a1-jdwswxr1.bedrock-runtime.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01c72056a0150e8a1-jdwswxr1-us-east-1c.bedrock-runtime.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01c72056a0150e8a1-jdwswxr1-us-east-1b.bedrock-runtime.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "bedrock-runtime.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z07205481ZII0D6J95BU8"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01c72056a0150e8a1",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08b1d33efa40cdf87",
              "eni-0f1177743149c9039"
            ],
            "owner_id": "689069515280",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-073d2390cf11e8ab1"
            ],
            "service_name": "com.amazonaws.us-east-1.bedrock-runtime",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "192.168.135.18",
                "subnet_id": "subnet-0db09e39c4b62f49c"
              },
              {
                "ipv4": "192.168.186.35",
                "subnet_id": "subnet-02cbd0f750a899b2d"
              }
            ],
            "subnet_ids": [
              "subnet-02cbd0f750a899b2d",
              "subnet-0db09e39c4b62f49c"
            ],
            "tags": {
              "Name": "acvals-su-chain-demo-bedrock_runtime"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "acvals-su-chain-demo-bedrock_runtime",
              "Project": "AgentCore-Supply-Chain",
              "Stack": "acvals-su-chain"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09af3b8d20e312e6b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "689069515280",
            "id": "vpce-01c72056a0150e8a1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "data.aws_region.current",
            "data.aws_subnet.runtime_subnets",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": "ecr_api",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689069515280:vpc-endpoint/vpce-083248216de271f4c",
            "dns_entry": [
              {
                "dns_name": "vpce-083248216de271f4c-cumtdajv.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-083248216de271f4c-cumtdajv-us-east-1c.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-083248216de271f4c-cumtdajv-us-east-1b.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z050751710D1QGIXD7ZDA"
              },
              {
                "dns_name": "ecr.us-east-1.api.aws",
                "hosted_zone_id": "Z0087697PPLV9JX1PZS8"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-083248216de271f4c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-022743ed6bf68b2ad",
              "eni-028a6b62d81347b28"
            ],
            "owner_id": "689069515280",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-073d2390cf11e8ab1"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "192.168.132.99",
                "subnet_id": "subnet-0db09e39c4b62f49c"
              },
              {
                "ipv4": "192.168.162.238",
                "subnet_id": "subnet-02cbd0f750a899b2d"
              }
            ],
            "subnet_ids": [
              "subnet-02cbd0f750a899b2d",
              "subnet-0db09e39c4b62f49c"
            ],
            "tags": {
              "Name": "acvals-su-chain-demo-ecr_api"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "acvals-su-chain-demo-ecr_api",
              "Project": "AgentCore-Supply-Chain",
              "Stack": "acvals-su-chain"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09af3b8d20e312e6b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "689069515280",
            "id": "vpce-083248216de271f4c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "data.aws_region.current",
            "data.aws_subnet.runtime_subnets",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": "ecr_dkr",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689069515280:vpc-endpoint/vpce-02415939b45b3532a",
            "dns_entry": [
              {
                "dns_name": "vpce-02415939b45b3532a-svosquj0.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-02415939b45b3532a-svosquj0-us-east-1b.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-02415939b45b3532a-svosquj0-us-east-1c.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z00876983MZI4GYPFM6N1"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z00876983MZI4GYPFM6N1"
              },
              {
                "dns_name": "dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z01104342QCE4NGYUWH5B"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z01104342QCE4NGYUWH5B"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-02415939b45b3532a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-053044fe5f7694b58",
              "eni-0e8c3ae171342c700"
            ],
            "owner_id": "689069515280",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-073d2390cf11e8ab1"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "192.168.146.223",
                "subnet_id": "subnet-0db09e39c4b62f49c"
              },
              {
                "ipv4": "192.168.160.20",
                "subnet_id": "subnet-02cbd0f750a899b2d"
              }
            ],
            "subnet_ids": [
              "subnet-02cbd0f750a899b2d",
              "subnet-0db09e39c4b62f49c"
            ],
            "tags": {
              "Name": "acvals-su-chain-demo-ecr_dkr"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "acvals-su-chain-demo-ecr_dkr",
              "Project": "AgentCore-Supply-Chain",
              "Stack": "acvals-su-chain"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09af3b8d20e312e6b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "689069515280",
            "id": "vpce-02415939b45b3532a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "data.aws_region.current",
            "data.aws_subnet.runtime_subnets",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": "logs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689069515280:vpc-endpoint/vpce-01b12b7d250dee3a3",
            "dns_entry": [
              {
                "dns_name": "vpce-01b12b7d250dee3a3-5395qbzs.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01b12b7d250dee3a3-5395qbzs-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01b12b7d250dee3a3-5395qbzs-us-east-1c.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06255312BYZZPGNTHCQ0"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z00879091L29W8L3CYBLT"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z008633324BKQGGRTI3ZH"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z0625530ZX6157U39HS"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01b12b7d250dee3a3",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0c8cd3c96e051453c",
              "eni-0e7b5908b24748e79"
            ],
            "owner_id": "689069515280",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-073d2390cf11e8ab1"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "192.168.152.124",
                "subnet_id": "subnet-0db09e39c4b62f49c"
              },
              {
                "ipv4": "192.168.166.40",
                "subnet_id": "subnet-02cbd0f750a899b2d"
              }
            ],
            "subnet_ids": [
              "subnet-02cbd0f750a899b2d",
              "subnet-0db09e39c4b62f49c"
            ],
            "tags": {
              "Name": "acvals-su-chain-demo-logs"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "acvals-su-chain-demo-logs",
              "Project": "AgentCore-Supply-Chain",
              "Stack": "acvals-su-chain"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09af3b8d20e312e6b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "689069515280",
            "id": "vpce-01b12b7d250dee3a3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "data.aws_region.current",
            "data.aws_subnet.runtime_subnets",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": "sts",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689069515280:vpc-endpoint/vpce-08930e662246245a3",
            "dns_entry": [
              {
                "dns_name": "vpce-08930e662246245a3-a6m18q4k.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08930e662246245a3-a6m18q4k-us-east-1c.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08930e662246245a3-a6m18q4k-us-east-1b.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sts.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z01105063DRSTPG8I2AL3"
              },
              {
                "dns_name": "sts.us-east-1.api.aws",
                "hosted_zone_id": "Z0623668OGT55D43LARM"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08930e662246245a3",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05657f260897d943c",
              "eni-0e4a75d0662438057"
            ],
            "owner_id": "689069515280",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-073d2390cf11e8ab1"
            ],
            "service_name": "com.amazonaws.us-east-1.sts",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "192.168.136.187",
                "subnet_id": "subnet-0db09e39c4b62f49c"
              },
              {
                "ipv4": "192.168.185.107",
                "subnet_id": "subnet-02cbd0f750a899b2d"
              }
            ],
            "subnet_ids": [
              "subnet-02cbd0f750a899b2d",
              "subnet-0db09e39c4b62f49c"
            ],
            "tags": {
              "Name": "acvals-su-chain-demo-sts"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "acvals-su-chain-demo-sts",
              "Project": "AgentCore-Supply-Chain",
              "Stack": "acvals-su-chain"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09af3b8d20e312e6b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "689069515280",
            "id": "vpce-08930e662246245a3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "data.aws_region.current",
            "data.aws_subnet.runtime_subnets",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": "xray",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689069515280:vpc-endpoint/vpce-0392b7093b6ad773c",
            "dns_entry": [
              {
                "dns_name": "vpce-0392b7093b6ad773c-4ir0atlm.xray.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0392b7093b6ad773c-4ir0atlm-us-east-1c.xray.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0392b7093b6ad773c-4ir0atlm-us-east-1b.xray.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "xray.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06245742Q1QX2T13HEE6"
              },
              {
                "dns_name": "xray.us-east-1.api.aws",
                "hosted_zone_id": "Z062454529ZRTHWIFVSQM"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0392b7093b6ad773c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-042e9c87ad5e1b311",
              "eni-04bcd499d4f8c447b"
            ],
            "owner_id": "689069515280",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-073d2390cf11e8ab1"
            ],
            "service_name": "com.amazonaws.us-east-1.xray",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "192.168.133.99",
                "subnet_id": "subnet-0db09e39c4b62f49c"
              },
              {
                "ipv4": "192.168.174.181",
                "subnet_id": "subnet-02cbd0f750a899b2d"
              }
            ],
            "subnet_ids": [
              "subnet-02cbd0f750a899b2d",
              "subnet-0db09e39c4b62f49c"
            ],
            "tags": {
              "Name": "acvals-su-chain-demo-xray"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "acvals-su-chain-demo-xray",
              "Project": "AgentCore-Supply-Chain",
              "Stack": "acvals-su-chain"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09af3b8d20e312e6b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "689069515280",
            "id": "vpce-0392b7093b6ad773c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "data.aws_region.current",
            "data.aws_subnet.runtime_subnets",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689069515280:vpc-endpoint/vpce-0ff92623f48b01313",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ff92623f48b01313",
            "ip_address_type": "ipv4",
            "owner_id": "689069515280",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-010e73915de999130"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "acvals-su-chain-demo-s3"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "Terraform",
              "Name": "acvals-su-chain-demo-s3",
              "Project": "AgentCore-Supply-Chain",
              "Stack": "acvals-su-chain"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-09af3b8d20e312e6b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "689069515280",
            "id": "vpce-0ff92623f48b01313",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_region.current",
            "data.aws_route_table.main"
          ]
        }
      ]
    }
  ]
}